--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
+# Brian's pip Requirements File for ERPNext v12
 braintree==3.57.1
-frappe
+frappe>=12.2.0
 gocardless-pro==1.11.0
 googlemaps==3.1.1
-pandas==0.24.2
+pandas==1.0.1
 plaid-python==3.4.0
 PyGithub==1.44.1
 python-stdnum==1.12
 Unidecode==1.1.1
 WooCommerce==2.1.1
+
