--- a/.pylintrc
+++ b/.pylintrc
@@ -1,2 +1,12 @@
 [MESSAGES CONTROL]
-disable=access-member-before-definition
+disable=
+    access-member-before-definition,
+    missing-function-docstring,
+    line-too-long
+
+[FORMAT]
+indent-string='\t'
+
+[BASIC]
+# Good variable names which should always be accepted, separated by a comma
+good-names=d,dt,dn
